<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignRight="@+id/profile_type_spinner"
        android:layout_alignEnd="@+id/profile_type_spinner"
        android:inputType="text" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_type_spinner"
        android:entries="@array/profile_name"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/profileName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/profile_type_spinner"
        android:layout_toLeftOf="@+id/volume_seekbar"
        android:layout_toStartOf="@+id/volume_seekbar" />

    <SeekBar
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/volume_seekbar"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_ringtone"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_select_ringtone"
        android:id="@+id/ringtone_button"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/profile_cancel"
        android:layout_below="@+id/ringtone_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/profile_save"
        android:layout_alignTop="@+id/profile_cancel"
        android:layout_alignRight="@+id/ringtone_button"
        android:layout_alignEnd="@+id/ringtone_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_a_rongtone"
        android:id="@+id/error_rt"
        android:layout_below="@+id/ringtone_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        android:textColor="#d50000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/volume_cannot_be_0_at_ringer_mode"
        android:id="@+id/error_vol"
        android:layout_below="@+id/ringtone_button"
        android:layout_toRightOf="@+id/error_rt"
        android:layout_toEndOf="@+id/error_rt"
        android:textColor="#d50000"
        android:visibility="gone" />
</RelativeLayout>